--- a/SKM Examples/SKM Examples CSharp/SKM Examples CSharp.csproj
+++ b/SKM Examples/SKM Examples CSharp/SKM Examples CSharp.csproj
@@ -36,9 +36,9 @@
       <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SKM, Version=3.0.1.1, Culture=neutral, PublicKeyToken=e62d9da6f287ebbb, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SKGL-Extension-for-dot-NET\SKM\bin\Debug\SKM.dll</HintPath>
+    <Reference Include="SKM, Version=4.0.1.2, Culture=neutral, PublicKeyToken=7fb118a02d446589, processorArchitecture=MSIL">
+      <HintPath>..\packages\SKGLExtension.4.0.1.2\lib\SKM.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
