Add example to check if payment is successful

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ SKM Examples/SKM Examples VBNET/obj/Debug/SKM Examples VBNET.vbproj.GenerateReso
 SKM Examples/SKM Examples VBNET/obj/Debug/SKM Examples VBNET.pdb
 *.cache
 SKM Examples/SKM Examples VBNET/bin/Debug/SKM Examples VBNET.exe
+payments/.vs/ConsoleApp14/v16/Server/sqlite3/storage.ide
+payments/.vs/ConsoleApp14/v16/Server/sqlite3/db.lock
+payments/.vs/ConsoleApp14/v16/.suo
+payments/.vs/ConsoleApp14/DesignTimeBuild/.dtbcache
